gcc/testsuite/g++.old-deja/g++.other/main2.C
// { dg-do assemble  }
// Origin: Mark Mitchell <mark@codesourcery.com>

double main () {} // { dg-error "" } main must return `int'
